fix: :bug: change spacing/font-size in theme and cardgrid

--- a/components/CardGrid/styles.module.css
+++ b/components/CardGrid/styles.module.css
@@ -1,4 +1,9 @@
 /* Cards with icons */
+:root {
+  --card-spacing-horizontal: calc(var(--ifm-spacing-horizontal) * 0.75);
+  --card-spacing-vertical: var(--ifm-spacing-vertical);
+}
+
 .homeGrid > * {
   margin: 0;
   position: relative;
@@ -11,7 +16,7 @@
   color: inherit;
   display: block;
   font-weight: normal;
-  padding: var(--ifm-spacing-vertical) var(--ifm-spacing-horizontal);
+  padding: var(--card-spacing-vertical) var(--card-spacing-horizontal);
   padding-left: 98px;
 }
 
@@ -54,7 +59,7 @@
   color: inherit;
   display: block;
   font-weight: normal;
-  padding: var(--ifm-spacing-vertical) var(--ifm-spacing-horizontal);
+  padding: var(--card-spacing-vertical) var(--card-spacing-horizontal);
 }
 
 .cardGrid > *:active,
@@ -73,14 +78,14 @@
   .homeGrid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: var(--ifm-spacing-vertical) var(--ifm-spacing-horizontal);
+    gap: var(--card-spacing-vertical) var(--card-spacing-horizontal);
   }
 }
 
 /* Add spacing between grids and sections */
 h2 + .cardGrid,
 h2 + .homeGrid {
-  margin-top: var(--ifm-spacing-vertical);
+  margin-top: var(--card-spacing-vertical);
 }
 
 .cardGrid + h2,
@@ -89,5 +94,5 @@ h2 + .homeGrid {
 }
 
 .homeGrid > p {
-  margin-top: var(--ifm-spacing-vertical) !important;
+  margin-top: var(--card-spacing-vertical) !important;
 }
