--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -25,9 +25,9 @@
   --ifm-h5-font-size: 0.75rem;
   --ifm-list-item-margin: 0.5rem;
   --ifm-menu-color: #334155;
-  --ifm-menu-font-size: 0.8rem;
+  --ifm-menu-font-size: 1rem;
   --ifm-menu-link-padding-horizontal: 1rem;
-  --ifm-menu-link-padding-vertical: 0.25rem;
+  --ifm-menu-link-padding-vertical: 0.5rem;
   --ifm-navbar-background-color: rgba(255, 255, 255, 0.8);
   --ifm-spacing-horizontal: 2rem;
   --ifm-toc-link-color: var(--ifm-font-color-base);
